style: fix spacing

--- a/blocks/moods/__main/moods__main.css
+++ b/blocks/moods/__main/moods__main.css
@@ -6,4 +6,5 @@
   height: 425px;
   margin: auto;
   padding-top: 35px;
+  gap: 90px;
 }
