--- a/blocks/moods/__title/moods__title.css
+++ b/blocks/moods/__title/moods__title.css
@@ -2,6 +2,7 @@
   font-size: 56px;
   font-weight: 500;
   line-height: 56px;
+  letter-spacing: -0.02em;
   width: 1049px;
   height: 166px;
   margin: auto;
